k8s/deploy-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  labels:
    project: k8s-app
spec:
  replicas: 1
  template:
    metadata:
      name: fastapi
      labels:
        app: backend
    spec:
      containers:
        - image: agemstone/k8s-bc-backend
          name: fastapi-app
      nodeSelector:
        nodetype: worker
  selector:
    matchLabels:
      app: backend
