k8s/deploy-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    project: k8s-app
spec:
  replicas: 1
  template:
    metadata:
      name: postgres
      labels:
        app: db
    spec:
      containers:
        - image: postgres
          name: postgres
      nodeSelector:
        nodetype: worker
  selector:
    matchLabels:
      app: db
