k8s/service-front-back.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
